<resources>
    <string name="app_name">SEFKIM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="other_apps">Other Apps</string>
    <string name="search_image">Search Image</string>
    <string name="favourites">Favourites</string>
    <string name="settings">settings</string>
    <string name="title_home">Home</string>
    <string name="title_category">Favourites</string>
    <string name="download_text">Download</string>
    <string name="title_search">Search</string>
    <string name="onboarding_title1">SEFKIM</string>
    <string name="onboarding_title2">SEFKIM</string>
    <string name="onboarding_title3">SEFKIM</string>
    <string name="onboarding_title4">SEFKIM</string>

    <string name="ob_header1">SIMPLE ABROAD CALLS</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>

    <string name="onboarding_content_1">SEFKIM is a project that was made\nin the scope of an android class\ni had at INSA CVL.</string>
    <string name="onboarding_content_2">In this application you will interactwith images offered by : \n\nFLICKR API</string>
    <string name="onboarding_content_3">I used different methods offered by the API such as "search" and "getRecent"to give the user the freedome and the ability to enjoy both FLICKR images and the beauty of this app.</string>
    <string name="onboarding_content_4">You can explore trends, categories or even search your favourite topics.\nDownloading your favorites or liking them to return to them back later is also an option.</string>

    <string name="finish">Let\'s go!</string>
</resources>